--- a/nvwa-vine-core/pom.xml
+++ b/nvwa-vine-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>work.nvwa</groupId>
         <artifactId>nvwa-vine</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>nvwa-vine-core</artifactId>
