feat: redesign api & add enum item prompt

--- a/nvwa-vine-core/pom.xml
+++ b/nvwa-vine-core/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>work.nvwa</groupId>
+            <artifactId>nvwa-vine-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
