--- a/nvwa-vine-bom/pom.xml
+++ b/nvwa-vine-bom/pom.xml
@@ -16,6 +16,11 @@
         <dependencies>
             <dependency>
                 <groupId>work.nvwa</groupId>
+                <artifactId>nvwa-vine-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>work.nvwa</groupId>
                 <artifactId>nvwa-vine-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
