--- a/nvwa-vine-bom/pom.xml
+++ b/nvwa-vine-bom/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>work.nvwa</groupId>
         <artifactId>nvwa-vine</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
 
     <artifactId>nvwa-vine-bom</artifactId>
